# Retail-sales-analytics

./: .gitignore  README.md  SETUP.md  pyproject.toml  requirements.txt
data/: README.md  cleaned_data.csv  pipeline_metrics.json
data/bronze/: sales_bronze.csv
data/gold/: sales_gold_monthly_category.csv
data/raw/: sample_sales.csv
data/silver/: sales_rejections.csv  sales_silver.csv
notebooks/: 01_data_cleaning.ipynb  02_eda_analysis.ipynb  03_statistical_tests.ipynb
sql/: cohort_analysis.sql  kpi_queries.sql  rfm_analysis.sql
src/retail_analytics/: __init__.py  cli.py  pipeline.py
tests/: test_pipeline.py
visuals/: README.md  summary.txt
